# order.rs

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
deploy/: nginx-rs.obayito.com.conf  orders-api.service  orders-history-sync.service  orders-worker.service  setup-rs.obayito.com.sh
docs/: README.md  api-catalog.txt  api-map.md  api-samples.json  api-test-report.md  api-test-results.json  architecture.md  order-row-keys.json  pageList-request-template.json  public-api.md  secrets.md  sql-model.md
docs/sql/: 001_init.sql  002_helpers.sql  003_outbox_and_indexes.sql  004_account_code.sql  005_batches.sql  006_product_catalog.sql
examples/: debug_thumb.rs  dump_cancel_sample.rs  dump_fee_today.rs  dump_instant_sample.rs  dump_instant_today.rs  gen_cancel_notify_png.rs  gen_instant_notify_png.rs  gen_summary_pdf.rs  send_cancel_list.rs  send_cancel_notify.rs  send_carrier_day_list.rs  send_instant_notify.rs  send_rekap_sore.rs
examples/fixtures/: cancel-notify-sample.json  instant-notify-active.json  instant-notify-hari-ini.json  instant-notify-open.json  instant-notify-sample.json
logs/logos-logistics/: manifest.json
scripts/: fetch-model.sh  push-secrets-infisical.sh
src/: accounts.rs  api.rs  auth.rs  batch.rs  batch_pdf.rs  cancel_notify.rs  carrier_day_list.rs  catalog.rs  client.rs  config.rs  crypto.rs  daily_infographic.rs  daily_report.rs  db.rs  error.rs  instant_notify.rs  lib.rs  main.rs  map.rs  notify.rs  ocr.rs  orders.rs  product_names.rs  screen_ocr.rs  session.rs  store.rs  sync.rs  wazapin.rs
tests/: batch_domain.rs  catalog_domain.rs  map_order.rs
tests/fixtures/: order_row_min.json
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/lib/: api.ts
(+4 files in other folders)
