[package]
name = "orders"
version = "0.1.0"
edition = "2021"
description = "BigSeller login + orders API client (DIY ddddocr OCR)"
license = "MIT"
repository = "https://github.com/bedulweb/order.rs"
readme = "README.md"
rust-version = "1.75"

[dependencies]
aes = "0.8"
anyhow = "1"
axum = { version = "0.8", features = ["macros", "multipart"] }
base64 = "0.22"
cbc = { version = "0.1", features = ["alloc"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15.7"
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
ocrs = "0.12"
ort = "2.0.0-rc.12"
rand = "0.8"
resvg = "0.45"
reqwest = { version = "0.13", default-features = false, features = ["json", "cookies", "rustls", "blocking", "multipart"] }
reqwest_cookie_store = "0.10.0"
rten = "0.24"
rust_decimal = { version = "1.42.1", features = ["serde-with-str"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls-ring",
    "postgres",
    "chrono",
    "json",
    "macros",
    "uuid",
] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time", "signal"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.8"
uuid = { version = "1", features = ["v4", "serde"] }
printpdf = { version = "0.7", features = ["embedded_images"] }
calamine = "0.26"

[profile.release]
lto = "thin"
codegen-units = 1
